# cubicat_s3

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  LICENSE  README.md  cubicat.cpp  cubicat.h  idf_component.yml
core/: id_object.cpp  id_object.h  keyword_macros.h  memory_allocator.h  memory_object.cpp  memory_object.h  memory_pool.cpp  memory_pool.h  rtti.h  shared_pointer.h  singleton.h
core/message/: message.h  message_tube.cpp  message_tube.h
devices/: audio_buffer.h  audio_codec.cpp  audio_codec.h  bb_captouch.cpp  bb_captouch.h  devices.h  display.cpp  display.h  gpio_config.h  lcd_interface.h  microphone.cpp  microphone.h  ring_buffer.h  speaker.cpp  speaker.h  unified_storage.cpp  unified_storage.h  wifi.cpp  wifi.h
devices/audio_decoder/mp3_decoder/: mp3_decoder.cpp  mp3_decoder.h
devices/audio_player/: audio_player.cpp  audio_player.h
devices/audio_player/aac_decoder/: aac_decoder.cpp  aac_decoder.h
devices/audio_player/flac_decoder/: flac_decoder.cpp  flac_decoder.h
devices/audio_player/mp3_decoder/: mp3_decoder.cpp
esp32_impl/: esp_helper.c  esp_lcd.c  esp_memory_allocator.c  esp_st7789.c
graphic_engine/: config_manager.cpp  config_manager.h  definitions.h  dirtyable.h  embed_game_engine.cpp  embed_game_engine.h  input_manager.cpp  input_manager.h  mounting_point.h  node.cpp  node.h  node2d.cpp  node2d.h  region.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  scene_manager.cpp  scene_manager.h  schedule_manager.cpp  schedule_manager.h  timer.cpp  timer.h
graphic_engine/box2d-lite/: Body.cpp  Body.h  Collide.cpp  Joint.h  MathUtils.h  World.cpp  World.h
graphic_engine/component/: component.h  rigidbody_component.cpp  rigidbody_component.h  sheet_animation_component.cpp  sheet_animation_component.h
graphic_engine/drawable/: bmfont.cpp  bmfont.h  drawable.cpp  drawable.h  font.cpp  font.h  gb2312font_20.cpp  gb2312font_20.h  image_data.h  material.cpp  material.h  polygon.cpp  polygon.h  polygon2d.cpp  polygon2d.h  quad.cpp  quad.h  rectangle.cpp  rectangle.h  sprite.cpp  sprite.h  sprite_sheet.cpp  sprite_sheet.h  texture.cpp  texture.h
graphic_engine/drawable/mesh/: edge.h  mesh.cpp  mesh.h  triangle.h  vectex.h
graphic_engine/math/: common.cpp  common.h  constants.cpp  constants.h  matrix2.h  matrix3.h  path_finding.cpp  path_finding.h  vector2.h  vector3.h  vector4.h
graphic_engine/message/: message_tube.h
graphic_engine/renderer/: render_state.h  renderer.cpp  renderer.h
graphic_engine/tick_manager/: ticke_manager.h  ticker.h  ticker_manager.cpp
graphic_engine/widgets/: button.cpp  button.h  panel.cpp  panel.h  text_label.cpp  text_label.h  widget.cpp  widget.h
js_binding/: cubicat_api_export.cpp  js_binding.cpp  js_binding.h
st7789/: st7789.c  st7789.h
tools/: js_api_generator.py  res_converter.py
utils/: helper.cpp  helper.h  logger.h
